embassy-executor/tests/ui/impl_trait_static.stderr
error: `impl Trait` is not allowed in task arguments. It is syntax sugar for generics, and tasks can't be generic.
 --> tests/ui/impl_trait_static.rs:4:18
  |
4 | async fn foo(_x: impl Sized + 'static) {}
  |                  ^^^^^^^^^^^^^^^^^^^^
